tp1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    orsys.fr/app: http
spec:
  containers:
  - name: serveur
    image: nginx:1.17.4-alpine
    ports:
      - containerPort: 80
