tp1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  selector:
    orsys.fr/app: http
  ports:
  - port: 88
    targetPort: 80
