tp1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ing
spec:
  rules:
  - host: tp.k8s.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http
            port: 
              number: 88
